--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -121,7 +121,7 @@
         {%- case block.type -%}
           {%- when 'heading' -%}
             <h2
-              class="banner__heading inline-richtext {{ block.settings.heading_size }}"
+              class="banner__heading inline-richtext {{ block.settings.heading_size }} h-shadow"
               {{ block.shopify_attributes }}
             >
               {{ block.settings.heading }}
