--- a/assets/base.css
+++ b/assets/base.css
@@ -265,7 +265,8 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 }
 
 .h-shadow{
-  text-shadow: 0 0 6px rbga(0,0,0,0.5);
+  text-shadow: 0 0 6px rgba(0,0,0,0.5);
+  
 }
 
 h1,
