create parallax section

--- a/assets/section-image-banner-parallax.css
+++ b/assets/section-image-banner-parallax.css
@@ -481,3 +481,12 @@
     color: currentColor;
   }
 }
+
+.banner--parallax {
+  /* Apply a scale transform directly in CSS */
+  transition: transform 0.1s ease-out; /* Smooths out the transition of the transform changes */
+}
+
+.banner--parallax-container {
+  overflow: hidden;
+}
