--- a/sections/image-banner-parallax.liquid
+++ b/sections/image-banner-parallax.liquid
@@ -168,7 +168,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.image-banner.name",
+  "name": "t:sections.image-banner-parallax.name",
   "tag": "section",
   "class": "section",
   "disabled_on": {
@@ -178,12 +178,12 @@
     {
       "type": "image_picker",
       "id": "image",
-      "label": "t:sections.image-banner.settings.image.label"
+      "label": "t:sections.image-banner-parallax.settings.image.label"
     },
     {
       "type": "image_picker",
       "id": "image_2",
-      "label": "t:sections.image-banner.settings.image_2.label"
+      "label": "t:sections.image-banner-parallax.settings.image_2.label"
     },
     {
       "type": "range",
@@ -192,7 +192,7 @@
       "max": 100,
       "step": 10,
       "unit": "%",
-      "label": "t:sections.image-banner.settings.image_overlay_opacity.label",
+      "label": "t:sections.image-banner-parallax.settings.image_overlay_opacity.label",
       "default": 0
     },
     {
@@ -201,24 +201,24 @@
       "options": [
         {
           "value": "adapt",
-          "label": "t:sections.image-banner.settings.image_height.options__1.label"
+          "label": "t:sections.image-banner-parallax.settings.image_height.options__1.label"
         },
         {
           "value": "small",
-          "label": "t:sections.image-banner.settings.image_height.options__2.label"
+          "label": "t:sections.image-banner-parallax.settings.image_height.options__2.label"
         },
         {
           "value": "medium",
-          "label": "t:sections.image-banner.settings.image_height.options__3.label"
+          "label": "t:sections.image-banner-parallax.settings.image_height.options__3.label"
         },
         {
           "value": "large",
-          "label": "t:sections.image-banner.settings.image_height.options__4.label"
+          "label": "t:sections.image-banner-parallax.settings.image_height.options__4.label"
         }
       ],
       "default": "medium",
-      "label": "t:sections.image-banner.settings.image_height.label",
-      "info": "t:sections.image-banner.settings.image_height.info"
+      "label": "t:sections.image-banner-parallax.settings.image_height.label",
+      "info": "t:sections.image-banner-parallax.settings.image_height.info"
     },
     {
       "type": "select",
@@ -226,49 +226,49 @@
       "options": [
         {
           "value": "top-left",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__1.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__1.label"
         },
         {
           "value": "top-center",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__2.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__2.label"
         },
         {
           "value": "top-right",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__3.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__3.label"
         },
         {
           "value": "middle-left",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__4.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__4.label"
         },
         {
           "value": "middle-center",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__5.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__5.label"
         },
         {
           "value": "middle-right",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__6.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__6.label"
         },
         {
           "value": "bottom-left",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__7.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__7.label"
         },
         {
           "value": "bottom-center",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__8.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__8.label"
         },
         {
           "value": "bottom-right",
-          "label": "t:sections.image-banner.settings.desktop_content_position.options__9.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_position.options__9.label"
         }
       ],
       "default": "middle-center",
-      "label": "t:sections.image-banner.settings.desktop_content_position.label"
+      "label": "t:sections.image-banner-parallax.settings.desktop_content_position.label"
     },
     {
       "type": "checkbox",
       "id": "show_text_box",
       "default": true,
-      "label": "t:sections.image-banner.settings.show_text_box.label"
+      "label": "t:sections.image-banner-parallax.settings.show_text_box.label"
     },
     {
       "type": "select",
@@ -276,19 +276,19 @@
       "options": [
         {
           "value": "left",
-          "label": "t:sections.image-banner.settings.desktop_content_alignment.options__1.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_alignment.options__1.label"
         },
         {
           "value": "center",
-          "label": "t:sections.image-banner.settings.desktop_content_alignment.options__2.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_alignment.options__2.label"
         },
         {
           "value": "right",
-          "label": "t:sections.image-banner.settings.desktop_content_alignment.options__3.label"
+          "label": "t:sections.image-banner-parallax.settings.desktop_content_alignment.options__3.label"
         }
       ],
       "default": "center",
-      "label": "t:sections.image-banner.settings.desktop_content_alignment.label"
+      "label": "t:sections.image-banner-parallax.settings.desktop_content_alignment.label"
     },
     {
       "type": "color_scheme",
@@ -326,7 +326,7 @@
     },
     {
       "type": "header",
-      "content": "t:sections.image-banner.settings.mobile.content"
+      "content": "t:sections.image-banner-parallax.settings.mobile.content"
     },
     {
       "type": "select",
@@ -334,44 +334,44 @@
       "options": [
         {
           "value": "left",
-          "label": "t:sections.image-banner.settings.mobile_content_alignment.options__1.label"
+          "label": "t:sections.image-banner-parallax.settings.mobile_content_alignment.options__1.label"
         },
         {
           "value": "center",
-          "label": "t:sections.image-banner.settings.mobile_content_alignment.options__2.label"
+          "label": "t:sections.image-banner-parallax.settings.mobile_content_alignment.options__2.label"
         },
         {
           "value": "right",
-          "label": "t:sections.image-banner.settings.mobile_content_alignment.options__3.label"
+          "label": "t:sections.image-banner-parallax.settings.mobile_content_alignment.options__3.label"
         }
       ],
       "default": "center",
-      "label": "t:sections.image-banner.settings.mobile_content_alignment.label"
+      "label": "t:sections.image-banner-parallax.settings.mobile_content_alignment.label"
     },
     {
       "type": "checkbox",
       "id": "stack_images_on_mobile",
       "default": true,
-      "label": "t:sections.image-banner.settings.stack_images_on_mobile.label"
+      "label": "t:sections.image-banner-parallax.settings.stack_images_on_mobile.label"
     },
     {
       "type": "checkbox",
       "id": "show_text_below",
       "default": true,
-      "label": "t:sections.image-banner.settings.show_text_below.label"
+      "label": "t:sections.image-banner-parallax.settings.show_text_below.label"
     }
   ],
   "blocks": [
     {
       "type": "heading",
-      "name": "t:sections.image-banner.blocks.heading.name",
+      "name": "t:sections.image-banner-parallax.blocks.heading.name",
       "limit": 3,
       "settings": [
         {
           "type": "inline_richtext",
           "id": "heading",
           "default": "Image banner",
-          "label": "t:sections.image-banner.blocks.heading.settings.heading.label"
+          "label": "t:sections.image-banner-parallax.blocks.heading.settings.heading.label"
         },
         {
           "type": "select",
@@ -397,14 +397,14 @@
     },
     {
       "type": "text",
-      "name": "t:sections.image-banner.blocks.text.name",
+      "name": "t:sections.image-banner-parallax.blocks.text.name",
       "limit": 1,
       "settings": [
         {
           "type": "inline_richtext",
           "id": "text",
           "default": "Give customers details about the banner image(s) or content on the template.",
-          "label": "t:sections.image-banner.blocks.text.settings.text.label"
+          "label": "t:sections.image-banner-parallax.blocks.text.settings.text.label"
         },
         {
           "type": "select",
@@ -412,69 +412,69 @@
           "options": [
             {
               "value": "body",
-              "label": "t:sections.image-banner.blocks.text.settings.text_style.options__1.label"
+              "label": "t:sections.image-banner-parallax.blocks.text.settings.text_style.options__1.label"
             },
             {
               "value": "subtitle",
-              "label": "t:sections.image-banner.blocks.text.settings.text_style.options__2.label"
+              "label": "t:sections.image-banner-parallax.blocks.text.settings.text_style.options__2.label"
             },
             {
               "value": "caption-with-letter-spacing",
-              "label": "t:sections.image-banner.blocks.text.settings.text_style.options__3.label"
+              "label": "t:sections.image-banner-parallax.blocks.text.settings.text_style.options__3.label"
             }
           ],
           "default": "body",
-          "label": "t:sections.image-banner.blocks.text.settings.text_style.label"
+          "label": "t:sections.image-banner-parallax.blocks.text.settings.text_style.label"
         }
       ]
     },
     {
       "type": "buttons",
-      "name": "t:sections.image-banner.blocks.buttons.name",
+      "name": "t:sections.image-banner-parallax.blocks.buttons.name",
       "limit": 1,
       "settings": [
         {
           "type": "text",
           "id": "button_label_1",
           "default": "Button label",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_label_1.label",
-          "info": "t:sections.image-banner.blocks.buttons.settings.button_label_1.info"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_label_1.label",
+          "info": "t:sections.image-banner-parallax.blocks.buttons.settings.button_label_1.info"
         },
         {
           "type": "url",
           "id": "button_link_1",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_link_1.label"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_link_1.label"
         },
         {
           "type": "checkbox",
           "id": "button_style_secondary_1",
           "default": false,
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_1.label"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_style_secondary_1.label"
         },
         {
           "type": "text",
           "id": "button_label_2",
           "default": "Button label",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_label_2.label",
-          "info": "t:sections.image-banner.blocks.buttons.settings.button_label_2.info"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_label_2.label",
+          "info": "t:sections.image-banner-parallax.blocks.buttons.settings.button_label_2.info"
         },
         {
           "type": "url",
           "id": "button_link_2",
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_link_2.label"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_link_2.label"
         },
         {
           "type": "checkbox",
           "id": "button_style_secondary_2",
           "default": false,
-          "label": "t:sections.image-banner.blocks.buttons.settings.button_style_secondary_2.label"
+          "label": "t:sections.image-banner-parallax.blocks.buttons.settings.button_style_secondary_2.label"
         }
       ]
     }
   ],
   "presets": [
     {
-      "name": "t:sections.image-banner.presets.name",
+      "name": "t:sections.image-banner-parallax.presets.name",
       "blocks": [
         {
           "type": "heading"
