--- a/sections/image-banner-parallax.liquid
+++ b/sections/image-banner-parallax.liquid
@@ -217,8 +217,7 @@
       "min": 0,
       "max": 1,
       "step": 0.1,
-      "default": 0.3,
-      "unit": "factor"
+      "default": 0.3
     },
     {
       "type": "range",
@@ -227,8 +226,7 @@
       "min": 1,
       "max": 2,
       "step": 0.1,
-      "default": 1.2,
-      "unit": "factor"
+      "default": 1.2
     },
 
     {
